# ontorag

./: .example.env  .gitignore  ARCHITECTURE_REVIEW.md  README.md  app.py  cli_extract.py  ontology_induction.prompt.md  ontology_proposal.py  openrouter_client.py  pyproject.toml  requirements.txt
ontorag/: alignment_normalizer.py  blazegraph.py  cli.py  dto.py  extractor_ingest.py  instance_extractor_openrouter.py  instances_to_ttl.py  mcp_backend.py  mcp_client.py  mcp_server.py  ontology_catalog.py  ontology_extractor.py  ontology_extractor_openrouter.py  ontology_mcp.py  proposal_aggregator.py  proposal_to_ttl.py  saprql-server.py  schema_alignment.py  schema_card.py  sparql_server.py  storage_jsonl.py
ontorag/hub/: __init__.py  app.py  auth.py  github_storage.py  models.py
