[project]
name = "ontorag"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "typer>=0.12.0",
  "requests>=2.31.0",
  "pydantic>=2.0.0",
  "rdflib>=7.0.0",
  "pageindex>=0.2.5",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "fastmcp>=0.1.0",
  "mcp>=1.0.0",
  "EbookLib>=0.18",
  "html2text>=2024.2.26",
  "httpx>=0.27.0",
  "PyJWT>=2.8.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
ontorag = "ontorag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
